# slack-emojify

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: emoji.json
src/: emojify.rs  lib.rs
tests/: integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
