[package]
name = "xtask"
version = "0.1.1"
edition = "2021"
description = "A simple task runner for the project."

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
anyhow = "1.0.86"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "net", "fs", "io-std"] }
serde = { version = "1.0.209", features = ["derive"] }
regex = "1.10.6"
semver = { version = "1.0.23", features = ["serde"] }
